feat: Update DetailCategoryScreen to handle long click on transactions and refresh logic
- Added onLongClickTransaction callback to handle long clicks on transactions.
- Updated the getCategory method to include walletId in the API call.
- Modified DetailCategoryUiState to include selectedWallet.
- Adjusted DetailCategoryVM to collect selectedWallet and refresh category data accordingly.
- Refactored TransactionListItem to accept DomainTransaction and DomainCategory directly.
- Removed GetCategoryRes model and updated API to return DtoCategory directly.
- Updated swagger and documentation to reflect changes in API parameters and response types.
